# personal-growth-assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml  pytest.ini  requirements.txt  test_llm.py
backend/app/: config.py  main.py
backend/app/agent/: __init__.py  monitoring.py  prompts.py  react_agent.py  schemas.py  tools.py
backend/app/api/schemas/: __init__.py  analytics.py  common.py  entry.py  goal.py
backend/app/callers/: __init__.py  api_caller.py  base.py  mock_caller.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py
backend/app/dto/: __init__.py  entries.py
backend/app/graphs/: __init__.py  task_parser_graph.py
backend/app/infrastructure/llm/: api_caller.py  base.py
backend/app/infrastructure/logging/: __init__.py  handler.py  storage.py
backend/app/infrastructure/storage/: markdown.py  neo4j_client.py  qdrant_client.py  sqlite.py  sqlite_base.py  (+6 more)
backend/app/mappers/: __init__.py  entry_mapper.py
backend/app/mcp/: README.md  handlers.py  server.py  tools.py
backend/app/middleware/: __init__.py
backend/app/models/: __init__.py  enums.py  knowledge.py  review.py  task.py  user.py
backend/app/providers/: __init__.py  base.py  openai_provider.py
backend/app/routers/: __init__.py  ai_chat.py  analytics.py  auth.py  deps.py  entries.py  feedback.py  goals.py  intent.py  knowledge.py  logs.py  notifications.py  parse.py  playground.py  review.py  search.py  sessions.py
backend/app/services/: __init__.py  agent_service.py  ai_chat_service.py  analytics_service.py  auth_service.py  chat_service.py  embedding.py  entry_service.py  goal_service.py  hybrid_search.py  intent_service.py  knowledge_service.py  log_service.py  notification_service.py  recommendation_service.py  review_service.py  session_meta_store.py  sync_service.py  task_parser.py
backend/app/storage/: __init__.py  markdown.py  neo4j_client.py  qdrant_client.py  sqlite.py  sync.py
backend/app/utils/: mastery.py
backend/scripts/: claim_default_data.py  migrate_ailearn.py
backend/tests/: README.md  conftest.py  test_api_entries.py  test_callers.py  test_concurrency.py  test_entries_sync.py  test_entry_api_flow.py  test_entry_crud.py  test_intent.py  test_list_sync.py  test_llm_blocking.py  test_models.py  test_routers_entries.py  test_search_eval.py  test_storage_markdown.py  test_sync_blocking.py  test_task_parser.py
backend/tests/eval/: __init__.py  backfill_judge.py  classify_badcases.py  eval_trend.py  framework.py  judge.py  report_generator.py  report_template.html  run_eval.py  simulated_user.py  test_backfill_judge.py  test_classify_badcases.py  test_eval_trend.py  test_framework.py  test_integration_backfill.py  test_integration_scheduled_eval.py  test_judge.py  test_report_generator.py  test_report_template.py  test_run_eval_report.py  test_transcript.py  transcript.py
backend/tests/flow/: test_date_filter.py  test_entries_sync.py  test_entry_api_flow.py  test_entry_crud.py  test_export_goal_feedback_flow.py  test_feedback_flow.py  test_list_sync.py  test_llm_blocking.py  test_project_detail_flow.py
backend/tests/integration/: conftest.py  test_agent_e2e.py  test_knowledge_integration.py  test_search_integration.py
backend/tests/performance/: test_api_bench.py
backend/tests/unit/: test_auth.py  test_auth_api.py  test_callers.py  test_chat_persistence.py  test_concurrent_register.py  test_config.py  test_convert_entry.py  test_deps.py  test_export.py  test_greeting_b196.py  test_growth_curve_sql.py  test_heatmap_sql.py  test_logging_integration.py  test_mastery.py  test_mcp_auth.py  test_mcp_split.py  test_middleware_error.py  test_session_meta_store.py  test_tag_stats_sql.py  test_user_storage.py
(+2162 files in other folders)
