[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rizhi"
version = "0.56.0"
description = "日知 — AI 成长管理工具，整合任务管理、灵感收集、学习笔记、项目追踪"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.41.0",
    # MCP Server
    "mcp>=1.0.0",
    # Knowledge Graph
    "neo4j>=5.0.0",
    # Vector Search
    "qdrant-client>=1.7.0",
    # Observability
    "langsmith>=0.1.0",
    "langfuse>=2.0.0",
    # Remote Logging
    "log-service-sdk",
    "bcrypt>=4.0.0",
    "pyjwt>=2.12.1",
]

[tool.uv.sources]
log-service-sdk = { git = "https://github.com/xiaolutang/log-service.git", tag = "v0.1.0", subdirectory = "sdks/python" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    # Integration testing
    "testcontainers>=4.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (need network/API)",
    "slow: slow running tests (skip with -m 'not slow')",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
